--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Nunito Sans", sans-serif;
-  margin-top: 150px;
+  margin: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
